# home-assistant-technitiumdns

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  ARCHITECTURE.md  ATLAS-COMMONS-NOTICE.md  CHANGELOG.md  CONTRIBUTING.md  CORPORATE-LIABILITY-DISCLAIMER.md  README.md  hacs.json  info.md  pyproject.toml  renovate.json  requirements_dev.txt
.devcontainer/: devcontainer.json
.forgejo/workflows/: ci.yml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dco.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: main.json
.github/scripts/: apply-main-ruleset.sh  verify-dco.sh
.github/workflows/: ci.forgejo.yml  ci.github.yml  ci.yml  codacy.github.yml  codeql.github.yml  dependency-review.github.yml  dependency-review.yml  security-audit.github.yml  stale.github.yml  validate-hassfest.github.yml  validate.github.yml
custom_components/technitiumdns/: __init__.py  activity_analyzer.py  button.py  client.py  config_flow.py  const.py  coordinator.py  device_tracker.py  dhcp_sensors.py  diagnostics.py  dns_logs.py  manifest.json  models.py  sensor.py  services.py  strings.json  switch.py  system_health.py  utils.py
custom_components/technitiumdns/translations/: de.json  en.json  es.json  fr.json  it.json
docs/: MIGRATION_GUIDE.md
scripts/: develop  lint  setup  test
tests/: conftest.py  test_activity_analyzer.py  test_config_flow.py  test_coordinator.py  test_dhcp.py  test_dhcp_sensors.py  test_diagnostics.py  test_entities.py  test_init.py  test_options_flow.py  test_services.py  test_system_health.py  test_utils.py
