[project]
name = "technitiumdns"
version = "3.0.0"
description = "Custom Home Assistant integration for Technitium DNS Server."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["custom_components"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ASYNC", # flake8-async
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.technitiumdns"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.14"
strict = true
# Home Assistant re-exports many names (DeviceInfo, ScannerEntity, ...) without
# listing them in __all__; those documented import paths are valid at runtime.
implicit_reexport = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The technitiumdns-api client library ships no type information.
module = "technitiumdns.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
